--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
 
 		<p class="lead">Increasing your raw squat power with these simple steps</p>
 			
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat, asperiores doloremque. Explicabo molestiae ipsa, laudantium obcaecati sint maiores, blanditiis modi natus aperiam voluptate nisi doloremque. Ratione sint sunt dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate, molestiae amet, aut nulla impedit dignissimos accusamus laboriosam unde consectetur quasi facere, nesciunt delectus praesentium architecto maiores quod necessitatibus, pariatur?</p>
+		<p>It seems everything around us is designed to make our lives easier. For example, when was the last time you went to the library to research anything? With Google, all you have to do is type in a few letters—"Do I even lift, bro?"—and you're subjected to an infinite variety of results and insults. Thousands of people will line up to let you know that no, you most definitely do not lift. Easy peasy!</p>
 			</a>
 </div>
 
@@ -122,6 +122,7 @@
 
 
 <div class="col-xs-6 col-md-3 article-s">
+	<div class="well">
 	<h2>Recommended</h2>
 	<div class="articles">
 		<figure>
@@ -136,22 +137,27 @@
 		<p class="pb-center">Transform your body in 12 weeks with this amazing program! </p>
 		</a>
 		</figure>
-		<figure>
-		<div class="page-header"> Sponsored Link </div>
 
-		<a href="http://gracehillschurch.com/" target="_blank">
-		<img src="img/jess.jpg" class="img-responsive">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-		</a>
 		</figure>
-		<hr>
+		
 		<figure>
 		<a href="#">
 		<img src="img/runner.jpg" class="img-responsive">
 		<p>Preparing for your first marathon </p>
 		</a>
 		</figure>
+
+
+		<figure>
+		<div class="page-header"> Sponsored Link </div>
+		<hr>
+		<a href="http://gracehillschurch.com/" target="_blank">
+		<img src="img/jess.jpg" class="img-responsive">
+		<p>I'm saving a seat for you...</p>
+		</a>
+		
 		</div>
+	</div>
 	</div>
 </div>
 
@@ -160,10 +166,13 @@
 
 </main>
 
-<hr> 
+
 
 <footer>
-<div class="col-xs-4 col-md-4">
+<div class="row">
+<hr> 
+
+	<div class="col-xs-4 col-md-4">
 	Copyright &copy; All Right Reserved Francis Chan 2017
 </div>
 <div class="col-xs-4 col-md-4">
@@ -182,6 +191,8 @@
 					<span>Send</span></button>
 				</span>
 
+	</div>
+
 </div>
 </footer>
 
@@ -189,7 +200,7 @@
 
 
 
-<div class="b-top"><a href="index.html"><p><span class="glyphicon glyphicon-arrow-up"></span>Back to top</p></a></div>
+<div class="b-top"><a href="#"><p><span class="glyphicon glyphicon-arrow-up"></span>Back to top</p></a></div>
 
 
 <!-- Import Google Font -->
