--- a/traps.html
+++ b/traps.html
@@ -26,31 +26,31 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
       <li class="dropdown active">
         <a class="dropdown-toggle" data-toggle="dropdown" href="Workout.html">Workout
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-       	  <li><a href="Workout.html">Muscle Group Selector</a></li>
-          <li><a href="Shoulder.html">Shoulder</a></li>
-          <li><a href="Chest.html">Chest</a></li>
-          <li><a href="Abs.html">Abs</a></li>
-          <li><a href="Biceps.html">Biceps</a></li>
-          <li><a href="Triceps.html">Triceps</a></li>
-          <li><a href="Glutes.html">Glutes</a></li>
-          <li><a href="Quads.html">Quadriceps</a></li>
-          <li><a href="Hamstring.html">Hamstring</a></li>
-           <li><a href="Calf.html">Calves</a></li>   
-          <li><a href="Trapezius.html">Trapezius</a></li>                
-          <li><a href="Uback.html">Upper Back</a></li>
-          <li><a href="Lback.html">Lower Back</a></li>
+       	  <li><a href="workout.html">Muscle Group Selector</a></li>
+          <li><a href="shoulder.html">shoulder</a></li>
+          <li><a href="chest.html">chest</a></li>
+          <li><a href="abs.html">abs</a></li>
+          <li><a href="biceps.html">biceps</a></li>
+          <li><a href="triceps.html">Triceps</a></li>
+          <li><a href="glutes.html">Glutes</a></li>
+          <li><a href="quads.html">Quadriceps</a></li>
+          <li><a href="hamstring.html">Hamstring</a></li>
+           <li><a href="calf.html">Calves</a></li>   
+          <li><a href="trapezius.html">Trapezius</a></li>                
+          <li><a href="uback.html">Upper Back</a></li>
+          <li><a href="lback.html">Lower Back</a></li>
         </ul>
       </li>
-      <li><a href="Calorie.html">Calorie Calculator</a></li>
-      <li><a href="Meal.html">Create a Meal Plan</a></li>
+      <li><a href="#">Calorie Calculator</a></li>
+      <li><a href="#">Create a Meal Plan</a></li>
       </ul>
 
-      <ul class="nav navbar-nav navbar-right">			
+      <ul class="nav navbar-nav navbar-right">		
   
 
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -70,7 +70,7 @@
 	</nav> <!-- End of Navbar -->
 
 	<main class="container-fluid">
-		<div class="col-xs12 col-md-12">
+		<div class="col-xs-12 col-md-12">
 				<div class="page-header">
 				<h1>Traps Exercises</h1>				
 				</div>
