--- a/workout.html
+++ b/workout.html
@@ -25,28 +25,28 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
       <li class="dropdown active">
         <a class="dropdown-toggle" data-toggle="dropdown" href="Workout.html">Workout
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-       	  <li><a href="Workout.html">Muscle Group Selector</a></li>
-          <li><a href="Shoulder.html">Shoulder</a></li>
-          <li><a href="Chest.html">Chest</a></li>
-          <li><a href="Abs.html">Abs</a></li>
-          <li><a href="Biceps.html">Biceps</a></li>
-          <li><a href="Triceps.html">Triceps</a></li>
-          <li><a href="Glutes.html">Glutes</a></li>
-          <li><a href="Quads.html">Quadriceps</a></li>
-          <li><a href="Hamstring.html">Hamstring</a></li>
-           <li><a href="Calf.html">Calves</a></li>   
-          <li><a href="Trapezius.html">Trapezius</a></li>                
-          <li><a href="Uback.html">Upper Back</a></li>
-          <li><a href="Lback.html">Lower Back</a></li>
+       	  <li><a href="workout.html">Muscle Group Selector</a></li>
+          <li><a href="shoulder.html">shoulder</a></li>
+          <li><a href="chest.html">chest</a></li>
+          <li><a href="abs.html">abs</a></li>
+          <li><a href="biceps.html">biceps</a></li>
+          <li><a href="triceps.html">Triceps</a></li>
+          <li><a href="glutes.html">Glutes</a></li>
+          <li><a href="quads.html">Quadriceps</a></li>
+          <li><a href="hamstring.html">Hamstring</a></li>
+           <li><a href="calf.html">Calves</a></li>   
+          <li><a href="trapezius.html">Trapezius</a></li>                
+          <li><a href="uback.html">Upper Back</a></li>
+          <li><a href="lback.html">Lower Back</a></li>
         </ul>
       </li>
-      <li><a href="Calorie.html">Calorie Calculator</a></li>
-      <li><a href="Meal.html">Create a Meal Plan</a></li>
+      <li><a href="#">Calorie Calculator</a></li>
+      <li><a href="#">Create a Meal Plan</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">	
@@ -68,20 +68,21 @@
 		</div>
 	</nav>
 	<!-- nav bar end -->
-
+	<h1>Click a muscle to see workouts</h1>
 	<div class="col-xs-12 col-md-6">
+	<!-- <h1>Click a body part to see exercises</h1> -->
 	
 		<div class="image_map">
 		<map name="map_example">
-			<area href="Shoulder.html" alt="Shoulder" target="_blank" shape="poly" coords="300,162, 286,192, 322,244, 340,194" title="Shoulder">
-			<area href="Shoulder.html" alt="Shoulder" target="_blank" shape="poly" coords="107,163, 76,191, 86, 239, 112,214 " title="Shoulder">
-			<area href="Chest.html" alt="Bicep" target="_blank" shape="poly" coords="117,188, 117,270 192,265, 190, 188" title="Chest">
-			<area href="Chest.html" alt="Bicep" target="_blank" shape="poly" coords="212,192,212,269,287,270,287,191" title="Chest">
-			<area href="Biceps.html" alt="Bicep" target="_blank" shape="poly" coords="104,241,78,259,95,330,128,280" title="Bicep">
-			<area href="Biceps.html" alt="Abs" target="_blank" shape="poly" coords="318,251,301,283,329,341,352,303" title="Bicep">
-			<area href="Abs.html" alt="Abs" target="_blank" shape="poly" coords="200,271,160,286,161,390,200,494,215,491,240,380,244,294" title="Abs">
-			<area href="Quads.html" alt="Quadriceps" target="_blank" shape="poly" coords="148,469,114,529,131,648,192,648,200,537" title="Quadriceps">
-			<area href="Quads.html" alt="Quadriceps" target="_blank" shape="poly" coords="263,460,223,540,222,651,283,650,302,529" title="Quadriceps">
+			<area href="shoulder.html" alt="shoulder" target="_blank" shape="poly" coords="300,162, 286,192, 322,244, 340,194" title="shoulder">
+			<area href="shoulder.html" alt="shoulder" target="_blank" shape="poly" coords="107,163, 76,191, 86, 239, 112,214 " title="shoulder">
+			<area href="chest.html" alt="Bicep" target="_blank" shape="poly" coords="117,188, 117,270 192,265, 190, 188" title="chest">
+			<area href="chest.html" alt="Bicep" target="_blank" shape="poly" coords="212,192,212,269,287,270,287,191" title="chest">
+			<area href="biceps.html" alt="Bicep" target="_blank" shape="poly" coords="104,241,78,259,95,330,128,280" title="Bicep">
+			<area href="biceps.html" alt="abs" target="_blank" shape="poly" coords="318,251,301,283,329,341,352,303" title="Bicep">
+			<area href="abs.html" alt="abs" target="_blank" shape="poly" coords="200,271,160,286,161,390,200,494,215,491,240,380,244,294" title="abs">
+			<area href="quads.html" alt="Quadriceps" target="_blank" shape="poly" coords="148,469,114,529,131,648,192,648,200,537" title="Quadriceps">
+			<area href="quads.html" alt="Quadriceps" target="_blank" shape="poly" coords="263,460,223,540,222,651,283,650,302,529" title="Quadriceps">
 		 </map>
 		 <img src="img/front.jpg" class="front-m img-responsive" usemap="#map_example">
 		 <h1>Front</h1>		
@@ -94,8 +95,8 @@
 
 	<div class="image_map">
 		<map name="map_example2">
-			<area href="Shoulder.html" alt="Shoulder" target="_blank" shape="poly" coords="148,165,112,225,111,187" title="Shoulder">
-			<area href="shoulder.html" alt="Shoulder" target="_blank" shape="poly" coords="329,160,371,234,372,197" title="Shoulder">
+			<area href="shoulder.html" alt="shoulder" target="_blank" shape="poly" coords="148,165,112,225,111,187" title="shoulder">
+			<area href="shoulder.html" alt="shoulder" target="_blank" shape="poly" coords="329,160,371,234,372,197" title="shoulder">
 			<area href="uback.html" alt="Upper Back" target="_blank" shape="poly" coords="163,195,154,256,185,388,232,334,288,388,312,360,329,188" title="Upper Back">
 			<area href="lback.html" alt="Lower Back" target="_blank" shape="poly" coords="236,345,179,405,231,441,289,409" title="Lower Back">
 			<area href="trapezius.html" alt="Trapezius" target="_blank" shape="poly" coords="219,137,163,158,230,185,282,182,327,160,271,138" title="Trapezius">
@@ -103,8 +104,8 @@
 			<area href="glutes.html" alt="Glutes" target="_blank" shape="poly" coords="281,433,242,465,243,511,277,537,309,512,305,461" title="Glutes">
 			<area href="hamstring.html" alt="Hamstring" target="_blank" shape="poly" coords="256,546,315,546,315,685,257,685" title="Hamstring">
 			<area href="hamstring.html" alt="Hamstring" target="_blank" shape="poly" coords="167,552,167,684,226,684,225,552" title="Hamstring">
-			<area href="calves.html" alt="Calves" target="_blank" shape="poly" coords="168,703,170,812,219,814,222,702" title="Calf">
-			<area href="calves.html" alt="Calves" target="_blank" shape="poly" coords="
+			<area href="calf.html" alt="Calves" target="_blank" shape="poly" coords="168,703,170,812,219,814,222,702" title="Calf">
+			<area href="calf.html" alt="Calves" target="_blank" shape="poly" coords="
 			262,710,263,814,313,812,315,710" title="Calf">
 			<area href="triceps.html" alt="Triceps" target="_blank" shape="poly" coords="
 			136,207,101,252,110,323,152,294" title="Triceps">
