--- a/workout.html
+++ b/workout.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="Home.html">My Fitness Website</a>
+      <a class="navbar-brand" href="home.html">My Fitness Website</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
