--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/test.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Sedgwick+Ave+Display" rel="stylesheet">
 
 </head>
 <body>
@@ -20,10 +21,12 @@
   </svg>
 </div>
 	
-
-	<video autoplay loop id="video-background" muted plays-inline>
+<div class="video">
+	<video autoplay loop id="video-background"  plays-inline>
   <source src="videos/noexcuse.mp4" type="video/mp4">
 </video>
+</div>
+<div class="ready"><h1>Are you ready?</h1></div>
 
 	<!-- Import Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
